[gd_scene load_steps=11 format=3 uid="uid://cxco7l6jgsf2"]

[ext_resource type="Script" uid="uid://3l8nh0mxslqc" path="res://scripts/battle/battle_scene.gd" id="1_rum4d"]
[ext_resource type="Texture2D" uid="uid://4im0spyblxwl" path="res://assets/ui/enhanced_overlay.png" id="2_3oc74"]
[ext_resource type="Script" uid="uid://tbka1du0xcml" path="res://addons/simple_card_pile_ui/card_pile_ui.gd" id="4_g72on"]
[ext_resource type="PackedScene" uid="uid://bs2vgjwuarxm5" path="res://scripts/cards/card_ui.tscn" id="5_tttxe"]
[ext_resource type="Script" uid="uid://b3vqhxkwjhf6m" path="res://scripts/core/combination_dropzone.gd" id="6_ti0og"]
[ext_resource type="Texture2D" uid="uid://cmfpp08onmr3f" path="res://assets/card_clubs_07.png" id="7_bg0yk"]
[ext_resource type="Texture2D" uid="uid://42qs2jq604nw" path="res://assets/enemies/enemy_placeholder.png" id="7_rum4d"]
[ext_resource type="Script" uid="uid://bbq3kiis6024t" path="res://scripts/core/battle_manager.gd" id="8_rum4d"]

[sub_resource type="Curve" id="Curve_b5spy"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_utbpp"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_rum4d")

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_left = 3.0
offset_top = 5.0
offset_right = 1603.0
offset_bottom = 905.0
texture = ExtResource("2_3oc74")
expand_mode = 1

[node name="CardPileUI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 16.0
offset_bottom = 17.0
script = ExtResource("4_g72on")
json_card_database_path = "res://data/cards.json"
json_card_collection_path = "res://data/collection.json"
extended_card_ui = ExtResource("5_tttxe")
hand_pile_position = Vector2(1030, 960)
max_hand_size = 7
max_hand_spread = 800
hand_rotation_curve = SubResource("Curve_b5spy")
hand_vertical_curve = SubResource("Curve_utbpp")

[node name="CombinationDropzone" type="Control" parent="." node_paths=PackedStringArray("card_pile_ui")]
modulate = Color(0.804596, 0.934213, 0.842941, 1)
self_modulate = Color(0.589122, 0.477859, 0.620659, 1)
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 1614.0
offset_top = 491.0
offset_right = 1873.0
offset_bottom = 897.0
script = ExtResource("6_ti0og")
card_pile_ui = NodePath("../CardPileUI")

[node name="Background" type="TextureRect" parent="CombinationDropzone"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 416.0
texture = ExtResource("7_bg0yk")

[node name="EnemyDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 90.0
offset_bottom = 160.0

[node name="EnemyImage" type="TextureRect" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 1225.0
offset_top = 223.0
offset_right = 1275.0
offset_bottom = 274.0
scale = Vector2(4.62852, 9.8434)
texture = ExtResource("7_rum4d")
expand_mode = 3

[node name="EnemyName" type="Label" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 978.0
offset_top = 150.0
offset_right = 1178.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 50
text = "敌人名称"

[node name="EnemyHealth" type="ProgressBar" parent="EnemyDisplay"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 1192.0
offset_top = 160.0
offset_right = 1492.0
offset_bottom = 219.0
theme_override_font_sizes/font_size = 40

[node name="EnemyDescription" type="RichTextLabel" parent="EnemyDisplay"]
layout_mode = 0
offset_left = 964.0
offset_top = 301.0
offset_right = 1217.0
offset_bottom = 570.0
text = "敌人描述"
fit_content = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreDisplay" type="Label" parent="UI"]
offset_left = 2209.0
offset_top = 93.0
offset_right = 2269.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 30
text = "分数"

[node name="TurnsDisplay" type="Label" parent="UI"]
offset_left = 2205.0
offset_top = 41.0
offset_right = 2295.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "回合数"

[node name="PlayerHealth" type="ProgressBar" parent="UI"]
modulate = Color(1, 0.14, 0.14, 1)
offset_left = 154.0
offset_top = 159.0
offset_right = 454.0
offset_bottom = 209.0
theme_override_font_sizes/font_size = 30

[node name="ActionButtons" type="HBoxContainer" parent="UI"]
offset_left = 497.0
offset_top = 705.0
offset_right = 1085.0
offset_bottom = 756.0

[node name="EndTurnButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "结束回合"

[node name="UseItemButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "使用道具"

[node name="EnterShopButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "（调试）进入商店"

[node name="TestRewardButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
text = "测试奖励"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
offset_left = 2013.0
offset_top = 296.0
offset_right = 2134.0
offset_bottom = 336.0

[node name="ResultLabel" type="Label" parent="UI/GameOverPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 30.0
text = "失败！"

[node name="VictoryPanel" type="Panel" parent="UI"]
visible = false
offset_left = 2014.0
offset_top = 241.0
offset_right = 2134.0
offset_bottom = 281.0

[node name="ResultLabel" type="Label" parent="UI/VictoryPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 52.0
offset_bottom = 32.0
text = "胜利！"

[node name="CombinationResult" type="RichTextLabel" parent="UI"]
offset_left = 1622.0
offset_top = 404.0
offset_right = 1862.0
offset_bottom = 444.0

[node name="BattleManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_rum4d")
